--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 </thead>
 <!-- las etiquetas <p> la puesdes poner despues del tutulo como palabra clave o titulo secundario --> 
 <tbody><tr><td>
-<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html">Godzilla vs Kong<p>2021</p>
+<a href="../prueba/peliculas/godzillavskong.html">Godzilla vs Kong<p>2021</p>
 </a></td></tr>
 <tr><td>
-<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html">Superheroicos<p>2020</p>
+<a href="../prueba/peliculas/conjuro3.html">El Conjuro 3<p>2021</p>
 </a></td></tr>
 <tr><td>
 <a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html">Raya y el ultimo dragon<p>2020</p>
@@ -107,7 +107,7 @@
 <!---Inicio del Slider tipo Portada--->
 <div class="carousel-item active">
 <div class="col-xxl-5 col-lg-8 col-md-12">
-<img height="400" width="640" class="img-fluid" src="https://megaflixec.ga/Prueba/img/Portada3.jpg">
+<img height="400" width="640" class="img-fluid" src="https://1.bp.blogspot.com/-oChfdX7gcC8/YLwHAeLsXQI/AAAAAAAABOU/SZ7ITxa_5Ecdx0TUZLvqJhZR-Lx31dpOQCLcBGAsYHQ/s0/kong%2Bportada%2B%2528Personalizado%2529%2B%2528portada%2529.jpg">
 <a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html" class="carousel-detail">
 <div>
 <h3>Godzilla vs Kong</h3>
@@ -149,7 +149,7 @@
 <!---Inicio del Slider tipo Poster--->
 <a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html" title="Godzilla vs Kong"  class="poster " >
 <div>
-<img width="200" height="300" src="https://megaflixec.ga/Prueba/img/Poster4.jpg" />
+<img width="200" height="300" src="https://1.bp.blogspot.com/-oLpZOtJjnCs/YLwHAXWNWJI/AAAAAAAABOQ/J8PqAZ2IyDQhMf2G9q-46itYn9bviVTtwCLcBGAsYHQ/s0/kongg%2B%2528Personalizado%2529.jpg" />
 <div>
 </div>
 </div>
@@ -162,9 +162,9 @@
 </div>
 </a>
 <!---Copia esto para el siguiente Slider tipo Poster--->
-<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html" alt="Superheroicos" class="poster " >
+<a href="../prueba/peliculas/conjuro3.html" alt="El Conjuro 3" class="poster " >
 <div>
-<img width="200" height="300" src="https://megaflixec.ga/Prueba/img/Poster5.jpg" />
+<img width="200" height="300" src="https://1.bp.blogspot.com/-p1XMkoQxE2Y/YLqliCjxYwI/AAAAAAAABOA/z896KzpIPVQKd471-4E3TYOM5lCKtjNJwCLcBGAsYHQ/s0/conjuro%2B3%2B%2528Personalizado%2529.jpg" />
 <div>
 </div>
 </div>
