--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </thead>
 <!-- las etiquetas <p> la puesdes poner despues del tutulo como palabra clave o titulo secundario --> 
 <tbody><tr><td>
-<a href="../prueba/Peliculas/godzillavskong.html">Godzilla vs Kong<p>2021</p>
+<a href="../NextPlay/Peliculas/godzillavskong.html">Godzilla vs Kong<p>2021</p>
 </a></td></tr>
 <tr><td>
 <a href="../prueba/Peliculas/conjuro3.html">El Conjuro 3<p>2021</p>
@@ -147,7 +147,7 @@
 <button  class="next_btn"><i class="fa fa-chevron-right"></i></button>
 <div class="flix-scroll-x">
 <!---Inicio del Slider tipo Poster--->
-<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html" title="Godzilla vs Kong"  class="poster " >
+<a href="../NextPlay/Peliculas/godzillavskong.html" title="Godzilla vs Kong"  class="poster " >
 <div>
 <img width="200" height="300" src="https://1.bp.blogspot.com/-oLpZOtJjnCs/YLwHAXWNWJI/AAAAAAAABOQ/J8PqAZ2IyDQhMf2G9q-46itYn9bviVTtwCLcBGAsYHQ/s0/kongg%2B%2528Personalizado%2529.jpg" />
 <div>
