--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<link rel="icon" type="image/x-icon" href="https://moviepop5.ga/cinefipop-logo.png" />	
+<link rel="icon" type="image/x-icon" href="https://xavierpro593.github.io/suareztvip/img/favicon.png" />	
 <title>Megaplay</title>
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://xavierpro593.github.io/suareztvip/app/bootstrap.min.css">
-<link rel="stylesheet" href="https://xavierpro593.github.io/suareztvip/app/style.css">
+<link rel="stylesheet" href="https://xavierpro593.github.io/suareztvip/app/style2.css">
 <link rel="stylesheet" href="https://xavierpro593.github.io/suareztvip/app/nav.bar.css">
 <link rel="stylesheet" href="https://xavierpro593.github.io/suareztvip/app/fontawesome-pro.css">
 <link rel="stylesheet" href="https://xavierpro593.github.io/suareztvip/app/buscador.css">
@@ -22,23 +22,24 @@
 <div class="row main-row">
 <div class="sidebar">
 <h2 class="page-header logo-app">
-<img src="https://moviepop5.ga/20210509_143518_0000.png">
+<img src="https://xavierpro593.github.io/suareztvip/img/logo.png">
 </h2>
 <div class="nav-bar-container" >
 <nav class="navbar bg-light left-navbar"  >
 <ul class="navbar-nav">
-<li class="nav-item active"><a  class="nav-link" href="#"> <i class="fas fa-film"></i> Películas</a></li class="nav-item">
-<li class="nav-item"><a class="nav-link" href="../Series/serieshome.html"><i class="fas fa-tv-retro"></i> Series</a></li class="nav-item">
-<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-play"></i>  Generos Películas</a></li class="nav-item">
-<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-play"></i>  Generos Series</a></li class="nav-item">
+<a class="btn  btn-subscription"><i class="fas fa-star"></i> Ya Eres Un Usuario Premium</a>
+<li class="nav-item active"><a  class="nav-link" href="#"> <i class="fas fa-home"></i> Home</a></li class="nav-item">
+<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-film"></i>  Peliculas</a></li class="nav-item">
+<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-tv-retro"></i> Series</a></li class="nav-item">
 </ul>
 </nav>
 </div>
 <nav class="navbar bg-light left-navbar bottom-navbar">
 <ul class="navbar-nav">
-<li class="nav-item"><a class="nav-link" href="go:telegram" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a></li class="nav-item">
+<li class="nav-item"><a class="nav-link" href="#" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a></li class="nav-item">
+<li class="nav-item"><a class="nav-link" href="#" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a></li class="nav-item">
 <li class="nav-item"><a class="nav-link" href="go:DMCA"><i class="fas fa-lock"></i> D M C A</a></li class="nav-item">
-<li class="nav-item"><a class="nav-link" href="https://www.e-droid.net/privacy.php?ida=1490228&idl=es"><i class="fas fa-lock"></i> Política de privacidad</a></li class="nav-item">
+<li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-lock"></i> Política de privacidad</a></li class="nav-item">
 </ul>
 </nav>
 </div>
@@ -46,7 +47,7 @@
 <div class="main">
 <div class="xs-header" >
 <button class="btn btn-primary float-left menu-left-btn"><i class="fas fa-bars"></i></button>
-<img src="https://moviepop5.ga/20210509_143518_0000.png">
+<img src="https://xavierpro593.github.io/suareztvip/img/logo.png">
 <button class="btn btn-primary float-right search-btn"><i class="fas fa-search"></i></button>
 </div>
 <div class="row top-nav">
@@ -65,32 +66,17 @@
 </thead>
 <!-- las etiquetas <p> la puesdes poner despues del tutulo como palabra clave o titulo secundario --> 
 <tbody><tr><td>
-<a href="../prueba/Peliculas/Animacion/Entrada-de-la-Pelicula.html">La Familia Mitchell Vs las Máquinas<p>2021, animacion</p>
+<a href="../prueba/Peliculas/mitchel.html">Godzilla vs Kong<p>2021</p>
 </a></td></tr>
 <tr><td>
-<a href="../Peliculas/Animacion/Raya-y-el-ultimo-dragon.html">Raya y el ultimo dragon<p>2020, animacion</p>
+<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html">Superheroicos<p>2020</p>
+</a></td></tr>
+<tr><td>
+<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html">Raya y el ultimo dragon<p>2020</p>
 </a></td></tr>
 <!---Copia esto para la siguiente Busqueda--->
 <tr><td>
-<a href="../Peliculas/Animacion/Soul.html">Soul<p>2020, animacion</p>
-</a></td></tr>
-<tr><td>
-<a href="../Peliculas/Accion/godzilla-vs-kong.html">Godzilla Vs Kong<p>2021, Accion</p>
-</a></td></tr>
-<tr><td>
-<a href="../Peliculas/Accion/mortal-kombat.html">Mortal Kombat<p>2021, Accion</p>
-</a></td></tr>
-<tr><td>
-<a href="../Peliculas/Animacion/los-croods-1.html">Los Croods<p>2013, animacion</p>
-</a></td></tr>
-<tr><td>
-<a href="../Peliculas/Animacion/los-croods-2.html">Los Croods Una Nueva Era<p>2020, animacion, los croods 2</p>
-</a></td></tr>
-<tr><td>
-<a href="../Peliculas/Accion/kingsman-el-servicio-secreto.html">Kingsman: El Servicio Secreto<p>2014, accion</p>
-</a></td></tr>
-<tr><td>
-<a href="../Peliculas/Accion/kingsman-el-circulo-dorado.html">Kingsman: El Circulo Dorado<p>2017, accion</p>
+<a href="/Prueba//Peliculas/Entrada-de-la-Pelicula.html">Soul<p>2020</p>
 </a></td></tr>
 <!---Pega aqui el codigo del Buscador para una nueva Busqueda--->
 
@@ -121,10 +107,10 @@
 <!---Inicio del Slider tipo Portada--->
 <div class="carousel-item active">
 <div class="col-xxl-5 col-lg-8 col-md-12">
-<img height="400" width="640" class="img-fluid" src="https://1.bp.blogspot.com/-hPRAj1M16OM/YJiJtf-iW8I/AAAAAAAABKU/r2Ksdg5m8GMyPjxWxF1nubG3zAhLNaKXACLcBGAsYHQ/s16000/20210509_191502_0000.png">
-<a href="../Peliculas/Animacion/la-familia-mitchell-vs-las-maquinas.html" class="carousel-detail">
+<img height="400" width="640" class="img-fluid" src="https://1.bp.blogspot.com/-R4HfUJ9N-lY/YLqliKtFZWI/AAAAAAAABOE/CtAqNBXT0Sgz2BOxHsSPASjFeSYOyBz5gCLcBGAsYHQ/s0/conjuro%2B3%2Bportada%2B%2528portada%2529.jpg">
+<a href="../prueba/Peliculas/conjuro3.html" class="carousel-detail">
 <div>
-<h3>La Familia Mitchell vs Las Maquinas</h3>
+<h3>Godzilla vs Kong</h3>
 <button ><i class="fa fa-play"></i></button>
 </div>
 </a>
@@ -133,9 +119,8 @@
 <!---Copia esto para el siguiente Slider tipo Portada--->
 <div class="carousel-item">
 <div class="col-xxl-5 col-lg-8 col-md-12">
-<img height="400" width="640" class="img-fluid" src="https://1.bp.blogspot.com/-NWBOYmsD6fk/YKAKlNPDmLI/AAAAAAAABLM/HB8f7ZMl6CsmJaZ7FKcF4sYacg4VmqIYACLcBGAsYHQ/s640/20210515_115215.jpg">
-<a href="../Peliculas/Animacion/Raya-y-el-ultimo-dragon.html"
-class="carousel-detail">
+<img height="400" width="640" class="img-fluid" src="https://megaflixec.ga/Prueba/img/Portada4.jpg">
+<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html" class="carousel-detail">
 <div>
 <h3>Raya y el último dragón</h3>
 <button ><i class="fa fa-play"></i></button>
@@ -152,8 +137,8 @@ class="carousel-detail">
 <!---Pega Aqui para crear una nueva categoria--->
 <!---Slider tipo Poster--->
 <div class="col-sm-12 col-md-12 ">
-<a href="../Categorias/Animacion.html" class="title-more">
-<span>Animación</span>
+<a href="../prueba/Categorias/Categoria-Series.html" class="title-more">
+<span>Acción</span>
 <i class="fa fa-th float-right"></i>
 </a>
 </div>
@@ -162,14 +147,51 @@ class="carousel-detail">
 <button  class="next_btn"><i class="fa fa-chevron-right"></i></button>
 <div class="flix-scroll-x">
 <!---Inicio del Slider tipo Poster--->
-<a href="../prueba/Peliculas/Animacion/Entrada-de-la-Pelicula.htmll" title="La Familia Mitchell vs Las Maquinas"  class="poster " >
+<a href="../prueba/Peliculas/conjuro3.html" title="El Conjuro 3"  class="poster " >
+<div>
+<img width="200" height="300" src="https://1.bp.blogspot.com/-p1XMkoQxE2Y/YLqliCjxYwI/AAAAAAAABOA/z896KzpIPVQKd471-4E3TYOM5lCKtjNJwCLcBGAsYHQ/s0/conjuro%2B3%2B%2528Personalizado%2529.jpg" />
+<div>
+</div>
+</div>
+</a>
+<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html" alt="Raya y el último dragón" class="poster " >
+<div>
+<img width="200" height="300" src="https://megaflixec.ga/Prueba/img/Poster3.jpg" />
+<div>
+</div>
+</div>
+</a>
+<!---Copia esto para el siguiente Slider tipo Poster--->
+<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html" alt="Superheroicos" class="poster " >
+<div>
+<img width="200" height="300" src="https://megaflixec.ga/Prueba/img/Poster5.jpg" />
+<div>
+</div>
+</div>
+</a>
+<!---Pega aqui el codigo del Slider tipo Poster--->
+<!---No tocar esto--->
+</div>
+</div>
+<div class="col-sm-12 col-md-12 ">
+<a href="../Categorias/Animacion.html" class="title-more">
+<span>AnimaciÃ³n</span>
+<i class="fa fa-th float-right"></i>
+</a>
+</div>
+<div class="flix-carousel" >
+<button  class="prev_btn"><i class="fa fa-chevron-left"></i></button>
+<button  class="next_btn"><i class="fa fa-chevron-right"></i></button>
+<div class="flix-scroll-x">
+<!---Inicio del Slider tipo Poster--->
+<a href="../Peliculas/Animacion/la-familia-mitchell-vs-las-maquinas.html" title="La Familia Mitchell vs Las Maquinas"  class="poster " >
 <div>
 <img width="200" height="300" src="https://1.bp.blogspot.com/-YnPzfmXp5sw/YJiFVNzv-3I/AAAAAAAABJ0/DHSNK-m2BtMNqHR4Dgw9kLVo8Jh5KK-7ACLcBGAsYHQ/s300/20210509_185622_0000.png" />
 <div>
 </div>
 </div>
 </a>
-<a href="../Peliculas/Animacion/Raya-y-el-ultimo-dragon.html" alt="Raya y el último dragón" class="poster " >
+<a href="../Peliculas/Animacion/Raya-y-el-ultimo-dragon.html" alt="Raya y el Ãºltimo dragÃ³n" class="poster " >
 <div>
 <img width="200" height="300" src="https://1.bp.blogspot.com/-bXmRqzq0seA/YKASuWxK49I/AAAAAAAABLY/doPdSW2-ViIB_i1_Wy2CEJTHdpjLU_wxwCLcBGAsYHQ/s300/20210515_122653.jpg" />
 <div>
@@ -198,15 +220,10 @@ class="carousel-detail">
 </div>
 </div>
 </a>
-<!---Pega aqui el codigo del Slider tipo Poster--->
-<!---No tocar esto--->
-</div>
-</div>
-<!---Pega Aqui para crear una nueva categoria--->
 <!---Slider tipo Poster--->
 <div class="col-sm-12 col-md-12 ">
-<a href="../Categorias/Accion.html" class="title-more">
-<span>Acción</span>
+<a href="../prueba/Categorias/Categoria-Series.html" class="title-more">
+<span>Series</span>
 <i class="fa fa-th float-right"></i>
 </a>
 </div>
@@ -215,31 +232,17 @@ class="carousel-detail">
 <button  class="next_btn"><i class="fa fa-chevron-right"></i></button>
 <div class="flix-scroll-x">
 <!---Inicio del Slider tipo Poster--->
-<a href="../Peliculas/Accion/kingsman-el-servicio-secreto.html" title="kingsman 1"  class="poster " >
+<a href="../prueba/Serie/Para-Series.html" title="Falcon y el Soldado de Invierno"  class="poster " >
 <div>
-<img width="200" height="300" src="https://1.bp.blogspot.com/-oH-b6ar1LAU/YLKMuy3c7vI/AAAAAAAABOQ/ZhThYUwK-x4DXeCPhsAIAgT24qmK1AwcwCLcBGAsYHQ/s300/20210529_124751_0000.png" />
-<div>
-</div>
-</div>
-</a>
-<a href="../Peliculas/Accion/kingsman-el-circulo-dorado.html" title="kingsman 2"  class="poster " >
-<div>
-<img width="200" height="300" src="https://1.bp.blogspot.com/-mmNT3wVQ2m8/YLKMu-cHqBI/AAAAAAAABOM/2vZh62xP5_YvV6a4KdetlZ4Vlwia29dgACLcBGAsYHQ/s300/20210529_124751_0001.png" />
-<div>
-</div>
-</div>
-</a>
-<a href="../Peliculas/Accion/godzilla-vs-kong.html" title="Godzilla vs Kong"  class="poster " >
-<div>
-<img width="200" height="300" src="https://1.bp.blogspot.com/-9s96AW7vriw/YKQ34Vzk4dI/AAAAAAAABLw/xQ7wyJuQUxA8d29dKa0T6RiTplEX5EKVwCLcBGAsYHQ/s300/20210518_155451.jpg" />
+<img width="200" height="300" src="https://xavierpro593.github.io/suareztvip/img/Poster1.jpg" />
 <div>
 </div>
 </div>
 </a>
 <!---Copia esto para el siguiente Slider tipo Poster--->
-<a href="../Peliculas/Accion/mortal-kombat.html" alt="Mortal Kombat" class="poster " >
+<a href="/Prueba/Series/Entrada-de-la-Serie.html" alt="Cobra Kai" class="poster " >
 <div>
-<img width="200" height="300" src="https://1.bp.blogspot.com/-YmPEBv4itXY/YKVYSmKXmgI/AAAAAAAABMM/vDjm-YxAd2A33TtQFVgL7zmX31sPZu5HACLcBGAsYHQ/s0/rsz_mortal-kombat-poster-oficial-1-1.jpg" />
+<img width="200" height="300" src="https://xavierpro593.github.io/suareztvip/img/Poster2.jpg" />
 <div>
 </div>
 </div>
