--- a/index.html
+++ b/index.html
@@ -173,9 +173,10 @@
 <!---No tocar esto--->
 </div>
 </div>
+<!---Pega Aqui para crear una nueva categoria--->
 <div class="col-sm-12 col-md-12 ">
-<a href="../Categorias/Animacion.html" class="title-more">
-<span>AnimaciÃ³n</span>
+<a href="../prueba/Categorias/Categoria-Series.html" class="title-more">
+<span>rock</span>
 <i class="fa fa-th float-right"></i>
 </a>
 </div>
@@ -184,42 +185,33 @@
 <button  class="next_btn"><i class="fa fa-chevron-right"></i></button>
 <div class="flix-scroll-x">
 <!---Inicio del Slider tipo Poster--->
-<a href="../Peliculas/Animacion/la-familia-mitchell-vs-las-maquinas.html" title="La Familia Mitchell vs Las Maquinas"  class="poster " >
+<a href="../prueba/Peliculas/conjuro3.html" title="El Conjuro 3"  class="poster " >
 <div>
-<img width="200" height="300" src="https://1.bp.blogspot.com/-YnPzfmXp5sw/YJiFVNzv-3I/AAAAAAAABJ0/DHSNK-m2BtMNqHR4Dgw9kLVo8Jh5KK-7ACLcBGAsYHQ/s300/20210509_185622_0000.png" />
+<img width="200" height="300" src="https://1.bp.blogspot.com/-p1XMkoQxE2Y/YLqliCjxYwI/AAAAAAAABOA/z896KzpIPVQKd471-4E3TYOM5lCKtjNJwCLcBGAsYHQ/s0/conjuro%2B3%2B%2528Personalizado%2529.jpg" />
 <div>
 </div>
 </div>
 </a>
-<a href="../Peliculas/Animacion/Raya-y-el-ultimo-dragon.html" alt="Raya y el Ãºltimo dragÃ³n" class="poster " >
+<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html" alt="Raya y el último dragón" class="poster " >
 <div>
-<img width="200" height="300" src="https://1.bp.blogspot.com/-bXmRqzq0seA/YKASuWxK49I/AAAAAAAABLY/doPdSW2-ViIB_i1_Wy2CEJTHdpjLU_wxwCLcBGAsYHQ/s300/20210515_122653.jpg" />
+<img width="200" height="300" src="https://megaflixec.ga/Prueba/img/Poster3.jpg" />
 <div>
 </div>
 </div>
 </a>
 <!---Copia esto para el siguiente Slider tipo Poster--->
-<a href="../Peliculas/Animacion/Soul.html" alt="Soul" class="poster " >
+<a href="/Prueba/Peliculas/Entrada-de-la-Pelicula.html" alt="Superheroicos" class="poster " >
 <div>
-<img width="200" height="300" src="https://1.bp.blogspot.com/-flVcFNvrVIU/YJiIL0EnRnI/AAAAAAAABKE/bQ4XitmUUCshdMWm_LjqYhik2x052cTSwCLcBGAsYHQ/s300/20210509_191048_0000.png" />
-<div>
-</div>
-</div>
-</a>
-<a href="../Peliculas/Animacion/los-croods-1.html" alt="los croods 1" class="poster " >
-<div>
-<img width="200" height="300" src="https://1.bp.blogspot.com/-XxiFIj19pk8/YLE-0Y-Hs7I/AAAAAAAABNI/9Ml1m4yV7_IN0mJq2aNKpFRa6V9_stejwCLcBGAsYHQ/s300/20210528_125522_0000.png" />
+<img width="200" height="300" src="https://megaflixec.ga/Prueba/img/Poster5.jpg" />
 <div>
 </div>
 </div>
 </a>
-<a href="../Peliculas/Animacion/los-croods-2.html" alt="los croods 2" class="poster " >
-<div>
-<img width="200" height="300" src="https://1.bp.blogspot.com/-vEhrkUSk2Ik/YLFByyGaWvI/AAAAAAAABNU/V8kIeAUDC5QWL_P4Ecgwx6dnZtP60xpHQCLcBGAsYHQ/s300/20210528_131633_0000.png" />
-<div>
+<!---Pega aqui el codigo del Slider tipo Poster--->
+<!---No tocar esto--->
 </div>
-</div>
-</a>
+</div>  
+  
 <!---Slider tipo Poster--->
 <div class="col-sm-12 col-md-12 ">
 <a href="../prueba/Categorias/Categoria-Series.html" class="title-more">
@@ -252,6 +244,37 @@
 </div>
 </div>
 <!---fin de esta entrada--->
+<div class="col-sm-12 col-md-12 ">
+<a href="../prueba/Categorias/Categoria-Series.html" class="title-more">
+<span>Series</span>
+<i class="fa fa-th float-right"></i>
+</a>
+</div>
+<div class="flix-carousel" >
+<button  class="prev_btn"><i class="fa fa-chevron-left"></i></button>
+<button  class="next_btn"><i class="fa fa-chevron-right"></i></button>
+<div class="flix-scroll-x">
+<!---Inicio del Slider tipo Poster--->
+<a href="../prueba/Serie/Para-Series.html" title="Falcon y el Soldado de Invierno"  class="poster " >
+<div>
+<img width="200" height="300" src="https://xavierpro593.github.io/suareztvip/img/Poster1.jpg" />
+<div>
+</div>
+</div>
+</a>
+<!---Copia esto para el siguiente Slider tipo Poster--->
+<a href="/Prueba/Series/Entrada-de-la-Serie.html" alt="Cobra Kai" class="poster " >
+<div>
+<img width="200" height="300" src="https://xavierpro593.github.io/suareztvip/img/Poster2.jpg" />
+<div>
+</div>
+</div>
+</a>
+<!---Pega aqui el codigo del Slider tipo Poster--->
+<!---No tocar esto--->
+</div>
+</div>  
+  
 <!---Pega Aqui para crear una nueva categoria--->
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
